sumo/tests/dfrouter/errors/false_output_directory/errors.dfrouter
Error: Could not build output file 'invalid/emitters.add.xml'.
Quitting (on error).
